# nucleof767zi-rs

./: Cargo.toml  README.md
.cargo/: config
examples/: blinky.rs  button.rs  print.rs
src/: lib.rs  main.rs
