[package]
name = "nucleof767zi-rs"
version = "0.1.0"
authors = ["Ben Brown <bbrown1867@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
embedded-hal = "0.2.3"
stm32f7xx-hal = { version = "0.2.0", features = ["rt", "stm32f767"] }

# Added to address CVE-2020-36465
generic-array = "0.13.3"

[dev-dependencies]
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.3"
